# AUVTrainer

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
scripts/: manual.sh
src/auvtrainer/: __init__.py  run.py
src/auvtrainer/client/: __init__.py  requests.py
src/auvtrainer/controls/: __init__.py  converter.py  keyboard.py  keyboard_input.py
src/auvtrainer/db/: __init__.py  app.py  database.py  deps.py  initialization_sql.sql  models.py  routers.py  routes.py  run.py  schemas.py
src/auvtrainer/examples/: manual.py
src/auvtrainer/simulation/: manual_database.py  scenario.py
