[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auvtrainer"
version = "0.1.0"
description = "AUVTrainer backend/services"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Michael Lees" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "aiosqlite>=0.20.0",
  "pydantic>=2.7.0",
  "pynput>=1.8.1",
  "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["auvtrainer*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
